[tapocontrol] LightStrip L900 basicly supported
Signed-off-by: Christian Wild <christian@wild-bw.de>